--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
             nav {
                 background: rgb(0, 0, 255);
                margin: 0 auto;
+               margin-bottom: 20px;
                 display: flex;
                 padding: 10px;
+                border-radius: 20px;
             }
             h1 {
                 display: flex;
@@ -44,6 +46,7 @@
             main {
                 background: rgb(25, 25, 25);
                 display: flex;
+                border-radius: 30px;
             }
             .sidebar {
                 margin-right: 25px;
@@ -51,6 +54,7 @@
             }
             .sidebar-img {
                 width: 200px;
+                margin: 10px;
             }
             .content {
                 flex: 1;
@@ -59,6 +63,7 @@
             #interests {
                 border: 4px silver ridge;
                 padding: 8px;
+                border-radius: 20px;
             }
             h2, h3, p {
                 margin: 10px;
