Added stuff to Portfolio and changed title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Gavin's Home Page</title>
+        <title>Gavin's Website</title>
         <style>
             body {
                 background: rgb(0, 100, 100);
@@ -74,7 +74,7 @@
         <div id="all-contents">
             <!-- All content goes here -->
             <nav>
-                <h1>Gavin's Home Page</h1>
+                <h1>Gavin's Website</h1>
                 <ul id="nav-ul">
                     <li class="nav-li">
                         <a href="index.html">Home</a>
