Styled Portfolio and made nav links golden

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,62 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <header>Gavin's Website</header>
+        <title>Gavin's Website</title>
+        <style>
+          body {
+              background: rgb(0, 100, 100);
+              color: rgb(255, 255, 255);
+              padding: 10px;
+              font-family: arial;
+          }
+          #all-contents {
+            max-width: 800px;
+              margin: auto;
+          }
+       
+          /* navigation menu */
+          nav {
+              background: rgb(0, 0, 255);
+             margin: 0 auto;
+             margin-bottom: 20px;
+              display: flex;
+              padding: 10px;
+              border-radius: 20px;
+          }
+          h1 {
+              display: flex;
+              align-items: center;
+              color: white;
+              flex: 1;
+              margin: 0;
+          }
+          #nav-ul {
+              list-style-image: none;
+          }
+          .nav-li {
+              display: inline-block;
+              padding: 0 10px;
+          }
+          .nav-a {
+            color:#ffff00;
+          }
+          a {
+              text-decoration: none;
+              color: #fff;
+          }
+       
+          /* main container area beneath menu */
+          main {
+              background: rgb(25, 25, 25);
+              display: flex;
+              border-radius: 30px;
+          }
+          .content {
+              flex: 1;
+              padding: 15px;
+          }
+       </style>
     </head>
-
     <body>
       <div id="all-contents">
         <nav>
