--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 display: inline-block;
                 padding: 0 10px;
             }
+            .nav-a {
+            color:#ffff00;
+          }
             a {
                 text-decoration: none;
                 color: #fff;
@@ -77,10 +80,10 @@
                 <h1>Gavin's Website</h1>
                 <ul id="nav-ul">
                     <li class="nav-li">
-                        <a href="index.html">Home</a>
+                        <a class="nav-a" href="index.html">Home</a>
                       </li>
                       <li class="nav-li">
-                        <a href="portfolio.html">Portfolio</a>
+                        <a class="nav-a" href="portfolio.html">Portfolio</a>
                       </li>
                 </ul>
             </nav>
