--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,6 @@
               text-decoration: none;
               color: #fff;
           }
-       
           /* main container area beneath menu */
           main {
               background: rgb(25, 25, 25);
@@ -55,6 +54,27 @@
               flex: 1;
               padding: 15px;
           }
+           /* portfolio styles */
+         .content h1 {
+             color: white;
+         }
+         #portfolio {
+             list-style-type: none;
+             padding-left: 0;
+         }
+         #portfolio li {
+             background: rgb(0, 0, 0);
+             padding: 10px;
+             border-radius: 10px;
+             margin-bottom: 10px;
+         }
+         #portfolio li:hover {
+             background: rgb(44, 44, 44);
+         }
+         #portfolio a {
+             text-decoration: none;
+             color: #c3c3c3;
+         }
        </style>
     </head>
     <body>
