--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
              margin-bottom: 10px;
          }
          #portfolio li:hover {
-             background: rgb(44, 44, 44);
+             background: rgb(30, 30, 30);
          }
          #portfolio a {
              text-decoration: none;
@@ -93,7 +93,7 @@
      <main>
         <div class="content">
             <h1>Portfolio</h1>
-            <ul id="Portfolio">
+            <ul id="portfolio">
                 <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
                 <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
                 <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
