--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Gavin's Website</title>
+        <title>Gavin's Homepage</title>
+        <link rel="icon" type="image/x-icon" href="WebPageImages/MinecraftHead.png">
         <style>
             body {
-                background: rgb(0, 100, 100);
+                background: rgb(0, 89, 89);
+                background-image:
+                linear-gradient(45deg, #006464 25%, transparent 25%), 
+                linear-gradient(-45deg, #006464 25%, transparent 25%),
+                linear-gradient(45deg, transparent 75%, #006464 75%),
+                linear-gradient(-45deg, transparent 75%, #006464 75%);
+                background-size:100px 100px;    
+                background-position:0 0, 100px 0, 100px -100px, 0px 100px;
                 color: rgb(255, 255, 255);
                 padding: 10px;
                 font-family: arial;
@@ -16,7 +24,7 @@
          
             /* navigation menu */
             nav {
-                background: rgb(0, 0, 255);
+                background: rgb(0, 0, 179);
                margin: 0 auto;
                margin-bottom: 20px;
                 display: flex;
@@ -77,7 +85,7 @@
         <div id="all-contents">
             <!-- All content goes here -->
             <nav>
-                <h1>Gavin's Website</h1>
+                <h1>Gavin's Homepage</h1>
                 <ul id="nav-ul">
                     <li class="nav-li">
                         <a class="nav-a" href="index.html">Home</a>
@@ -90,7 +98,7 @@
             <main>
                 <!-- Sidebar section -->
                 <div class="sidebar">
-                    <img class="sidebar-img" src="https://cdn.discordapp.com/avatars/564469575240908817/39bd5fa8184de7cc62a98df27a16e64b.png">
+                    <img class="sidebar-img" src="WebPageImages/MeIRL.png">
                 </div>
                 <!-- Content Section-->
                 <div class="content">
@@ -100,7 +108,7 @@
                     <div id="interests">
                         <h3>Interests</h3>
                         <ul>
-                            <li>Playing Videogames</li>
+                            <li>Videogames</li>
                             <li>Escape Rooms</li>
                             <li>Swimming</li>
                         </ul>
