--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,19 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Gavin's Website</title>
+        <title>Gavin's Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="WebPageImages/MinecraftHead.png">
         <style>
           body {
-              background: rgb(0, 100, 100);
+              background: rgb(0, 89, 89);
+              
+              background-image:
+                linear-gradient(45deg, #006464 25%, transparent 25%), 
+                linear-gradient(-45deg, #006464 25%, transparent 25%),
+                linear-gradient(45deg, transparent 75%, #006464 75%),
+                linear-gradient(-45deg, transparent 75%, #006464 75%);
+                background-size:100px 100px;    
+                background-position:0 0, 100px 0, 100px -100px, 0px 100px;
               color: rgb(255, 255, 255);
               padding: 10px;
               font-family: arial;
@@ -16,7 +25,7 @@
        
           /* navigation menu */
           nav {
-              background: rgb(0, 0, 255);
+              background: rgb(0, 0, 179);
              margin: 0 auto;
              margin-bottom: 20px;
               display: flex;
@@ -80,7 +89,7 @@
     <body>
       <div id="all-contents">
         <nav>
-            <h1>Gavin's Website</h1>
+            <h1>Gavin's Gavin's Portfolio</h1>
             <ul id="nav-ul">
                <li class="nav-li">
                <a class="nav-a" href="index.html">Home</a>
