Added Contact Page and stylized current location in nav

--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Gavin's Homepage</title>
+        <title>Gavin's Contact Info</title>
         <link rel="icon" type="image/x-icon" href="WebPageImages/MinecraftHead.png">
         <style>
             body {
@@ -63,14 +63,6 @@
                 display: flex;
                 border-radius: 30px;
             }
-            .sidebar {
-                margin-right: 25px;
-                padding: 10px;
-            }
-            .sidebar-img {
-                width: 200px;
-                margin: 10px;
-            }
             .content {
                 flex: 1;
                 padding: 15px;
@@ -92,34 +84,24 @@
                 <h1>Gavin's Website</h1>
                 <ul id="nav-ul">
                     <li class="nav-li">
-                        <a class="nav-a" id="location" href="index.html">Home</a>
+                        <a class="nav-a" href="index.html">Home</a>
                       </li>
                       <li class="nav-li">
                         <a class="nav-a" href="portfolio.html">Portfolio</a>
                       </li>
                       <li class="nav-li">
-                        <a class="nav-a" href="contacts.html">Contact</a>
+                        <a class="nav-a" id="location" href="contacts.html">Contact</a>
                       </li>
                 </ul>
             </nav>
             <main>
-                <!-- Sidebar section -->
-                <div class="sidebar">
-                    <img class="sidebar-img" src="WebPageImages/MeIRL.png">
-                </div>
                 <!-- Content Section-->
                 <div class="content">
-                    <h2>Gavin Herdt</h2>
-                    <p>Student at Mandeville High School.</p>
-                    <!-- Interests section -->
-                    <div id="interests">
-                        <h3>Interests</h3>
-                        <ul>
-                            <li>Videogames</li>
-                            <li>Escape Rooms</li>
-                            <li>Swimming</li>
-                        </ul>
-                    </div>
+                    <h1>Contact me!</h1>
+                    <h2>Email:</h2>
+                    <p>gherdt@outlook.com</p>
+                    <h2>Discord:</h2>
+                    <p>Awsome_Creeper9#3177</p>
                 </div>
             </main>
         </div>
