--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,10 @@
               display: inline-block;
               padding: 0 10px;
           }
+          #location {
+            color:rgba(255, 255, 0, 0.75);
+            font-style:oblique;
+          }
           .nav-a {
             color:#ffff00;
           }
@@ -89,14 +93,17 @@
     <body>
       <div id="all-contents">
         <nav>
-            <h1>Gavin's Gavin's Portfolio</h1>
+            <h1>Gavin's Website</h1>
             <ul id="nav-ul">
                <li class="nav-li">
                <a class="nav-a" href="index.html">Home</a>
              </li>
              <li class="nav-li">
-               <a class="nav-a" href="portfolio.html">Portfolio</a>
+               <a class="nav-a" id="location" href="portfolio.html">Portfolio</a>
              </li>
+             <li class="nav-li">
+                <a class="nav-a" href="contacts.html">Contact</a>
+            </li>
          </ul>
      </nav>
      <main>
