Added colon after 'Interests' and made my name bigger

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                 </div>
                 <!-- Content Section-->
                 <div class="content">
-                    <h2>Gavin Herdt</h2>
+                    <h1>Gavin Herdt</h1>
                     <p>Student at Mandeville High School.</p>
                     <!-- Interests section -->
                     <div id="interests">
-                        <h3>Interests</h3>
+                        <h3>Interests:</h3>
                         <ul>
                             <li>Videogames</li>
                             <li>Escape Rooms</li>
