added slight margin before name

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                 padding: 8px;
                 border-radius: 20px;
             }
+            #name {
+                margin:9px;
+            }
             h2, h3, p {
                 margin: 10px;
             }
@@ -109,7 +112,7 @@
                 </div>
                 <!-- Content Section-->
                 <div class="content">
-                    <h1>Gavin Herdt</h1>
+                    <h1 id="name">Gavin Herdt</h1>
                     <p>Student at Mandeville High School.</p>
                     <!-- Interests section -->
                     <div id="interests">
