--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -61,8 +61,8 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
-
+			var positionX = 1;
+			var points = 0;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -70,7 +70,10 @@
 			turn it around! 
 			*/
 			function update() {
-				
+				var speed = 10;
+				//increase value of positionX by 10
+				positionX += speed;
+				moveBoxTo(positionX);
 
 			};
 
@@ -80,7 +83,10 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				positionX = 0;
+				changeBoxText(points);
+				points += 1;
+				speed += 3;
 
 
 			};
