Test with Y-axis

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,7 +8,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: #006464;
 			font-size: 300%;
 			text-align: center;
 			display: block;
@@ -39,6 +39,7 @@
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
+			var boardHeight = jQuery(window).height();
 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
@@ -47,8 +48,9 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
+				box.css("top", newPositionY);
 			}
 
 			// changes the text displayed on the Box
@@ -64,6 +66,8 @@
 			var positionX = 1;
 			var points = 0;
 			var speed = 10;
+			var positionY = 1;
+			var speedY = 10;
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
@@ -72,7 +76,21 @@
 			function update() {
 				//increase value of positionX by 10
 				positionX += speed;
-				moveBoxTo(positionX);
+				positionY += speedY
+				moveBoxTo(positionX, positionY);
+				if (positionY > boardHeight) {
+					speedY = -speedY;
+				}
+				else if (positionY <= 0) {
+					speedY = -speedY;
+				}
+
+				if (positionX > boardWidth) {
+					speed = -speed;
+				}
+				else if (positionX === 0) {
+					speed = -speed;
+				}
 
 			};
 
@@ -86,6 +104,8 @@
 				points += 1;
 				changeBoxText(points);
 				speed += 3;
+				speedY += 3;
+				positionY = 0;
 
 
 			};
