--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -9,6 +9,7 @@
 			width: 70px;
 			height: 70px;
 			background-color: #006464;
+			color: white;
 			font-size: 300%;
 			text-align: center;
 			display: block;
@@ -18,6 +19,7 @@
 		}
 		.board{
 			height: 100vh;
+			background: rgb(25, 25, 25);
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -40,6 +42,13 @@
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
 			var boardHeight = jQuery(window).height();
+			var randNumX = Math.random() * boardWidth;
+			var randNumY = Math.random() * boardHeight;
+			var randRed = Math.random() * 255;
+			var randGreen = Math.random() * 255;
+			var randBlue = Math.random() * 255;
+			var colorStr = " rgb(" + randRed + ", " + randGreen + ", " + randBlue + ")";
+			box.css('background-color', colorStr);
 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
@@ -100,14 +109,19 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				positionX = 1;
+				randNumX = Math.random() * boardWidth;
+				randNumY = Math.random() * boardHeight;
+				positionX = randNumX;
 				points += 1;
 				changeBoxText(points);
 				speed += 3;
 				speedY += 3;
-				positionY = 1;
-
-
+				positionY = randNumY;
+				var randRed = Math.random() * 255;
+				var randGreen = Math.random() * 255;
+				var randBlue = Math.random() * 255;
+				var colorStr = " rgb(" + randRed + ", " + randGreen + ", " + randBlue + ")";
+				box.css('background-color', colorStr);
 			};
 		})();
 	</script>
