--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -49,12 +49,15 @@
 			var randBlue = Math.random() * 255;
 			var colorStr = " rgb(" + randRed + ", " + randGreen + ", " + randBlue + ")";
 			box.css('background-color', colorStr);
+			var misclicks;
 
 			// Every 50 milliseconds, call the update Function (see below)
-			setInterval(update, 50);
+			var interval = setInterval(update, 50);
+
 			
 			// Every time the box is clicked, call the handleBoxClick Function (see below)
 			box.on('click', handleBoxClick);
+			board.on('click', handleBoardClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
 			function moveBoxTo(newPositionX, newPositionY) {
@@ -100,7 +103,6 @@
 				else if (positionX <= 0) {
 					speed = -speed;
 				}
-
 			};
 
 			/* 
@@ -123,6 +125,15 @@
 				var colorStr = " rgb(" + randRed + ", " + randGreen + ", " + randBlue + ")";
 				box.css('background-color', colorStr);
 			};
+			function handleBoardClick(){
+				misclicks += 1;
+				if (misclicks >= 10) {
+					endgame;
+				}
+			}
+			function endGame() {
+				clearInterval(interval);
+			}
 		})();
 	</script>
 </body>
