--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -135,6 +135,7 @@
 			function endGame() {
 				clearInterval(interval);
 				alert("Game over!\nFinal Score: " + points + "\n\nRefresh to play again!")
+				misclicks = 12;
 			}
 		})();
 	</script>
