--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -25,6 +25,8 @@
 			color: #ffffff;
 			font-size: xx-large;
 			text-align: right;
+			padding: 10px;
+			margin: 10px;
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
