--- a/projects/platformer/index.html
+++ b/projects/platformer/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" type="image/x-icon" href="https://github.com/GavinHerdt9/GavinHerdt9.github.io/blob/923618e48fd836e533c19eabe4f35db323455814/WebPageImages/MinecraftHead.png?raw=true">
         <title>Platformer</title>
         <script src="lib/jquery.min.js"></script>
         <script src="lib/phaser.min.js"></script>
