'dark moded' circularity

--- a/projects/circularity/index.html
+++ b/projects/circularity/index.html
@@ -25,6 +25,9 @@
         
         <style type="text/css">
             /*override default styles here*/
+            body {
+                background-color: rgb(25, 25, 25);
+            }
         </style>
     </head>
     <body>
