--- a/projects/runtime/index.html
+++ b/projects/runtime/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
 
         <link rel="icon" type="image/x-icon" href="https://github.com/GavinHerdt9/GavinHerdt9.github.io/blob/923618e48fd836e533c19eabe4f35db323455814/WebPageImages/MinecraftHead.png?raw=true">
-        <title>Runtime!</title>
+        <title>Runtime</title>
         <meta name="description" content="Operation Spark Motion Poem">
         <meta name="author" content="operationspark.org">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
