--- a/portfolio.html
+++ b/portfolio.html
@@ -112,8 +112,9 @@
             <ul id="portfolio">
                 <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
                 <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
-                <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
+                <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes</a></li>
                 <li><a href="projects/runtime/">Runtime : A game of running, shooting, ducking, and more. Progress Hallebot through the level</a></li>
+                <li><a href="projects/data-shapes/">Data Shapes : A display of shapes performing actions such as bouncing, blinking, and spinning</a></li>
             </ul>
         </div>
      </main>
