--- a/projects/data-shapes/index.html
+++ b/projects/data-shapes/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="image/x-icon" href="https://github.com/GavinHerdt9/GavinHerdt9.github.io/blob/923618e48fd836e533c19eabe4f35db323455814/WebPageImages/MinecraftHead.png?raw=true">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Data Shapes</title>
